Added cybersecurity story page

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,3 +36,10 @@
     <a href="/">Back to Home</a>
 </body>
 </html>
+
+<h2>Courses & Info</h2>
+<ul>
+    <li><a href="/static/cybersecurity/story.html">Cybersecurity story by wasif khan</a></li>
+    <li><a href="/static/entertainment/">Entertainment</a></li>
+</ul>
+
