Fix background image path

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <title>WasifZone</title>
   <style>
     body {
-      background-image: url("/static/images/myphoto.jpg.png");
+      background-image: url("../static/images/myphoto.jpg.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
