Fix main and add Home link

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,6 +110,7 @@
         <ul>
             <li><a href="/cybersecurity">Cybersecurity Lectures</a></li>
             <li><a href="/entertainment">Entertainment</a></li>
+            <li><a href="/home/login">Home</a<>li <!-- New link added -->
         </ul>
     </div>
 
