Add login and rota pages, update index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
     <div class="hamburger-menu">
         <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
         <div class="menu-items" id="menuItems">
-            <a href="/">Home</a>
+            <a href="/home/login">Home</a>
             <a href="/cybersecurity">Cybersecurity</a>
             <a href="/entertainment">Entertainment</a>
         </div>
