Update login, rota, and upload functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <title>Home Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Login to Home Rota</h1>
     {% if error %}
         <p style="color:red">{{ error }}</p>
     {% endif %}
@@ -13,5 +13,6 @@
         <input type="password" name="password" required>
         <button type="submit">Login</button>
     </form>
+    <a href="/">Back to Main Website</a>
 </body>
 </html>
